# quantum-resistance

./: .gitignore  AUDIT_REPORT.md.enc  AUDIT_REPORT_V2.md.enc  AUDIT_REPORT_V3.md.enc  AUDIT_REPORT_V4.md.enc  AUDIT_REPORT_V5.md.enc  AUDIT_REPORT_V6.md.enc  AUDIT_REPORT_V6_CRYPTOGRAPHY.md.enc  Cargo.toml  README.md  foundry.toml  remappings.txt
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-01T19-52-42-502Z.yml  page-2026-04-01T19-53-05-504Z.yml  page-2026-04-01T19-53-19-816Z.yml  page-2026-04-01T19-53-36-121Z.yml  page-2026-04-01T19-53-47-458Z.yml  page-2026-04-01T19-54-45-021Z.yml  page-2026-04-01T19-54-56-252Z.yml  page-2026-04-01T20-02-41-689Z.yml  page-2026-04-01T20-06-46-381Z.yml  page-2026-04-01T20-07-01-003Z.yml  page-2026-04-01T20-08-08-891Z.yml  page-2026-04-01T20-10-50-084Z.yml  page-2026-04-01T20-11-06-602Z.yml  page-2026-04-01T20-19-17-033Z.yml  page-2026-04-01T20-19-27-968Z.yml  page-2026-04-01T20-19-46-197Z.yml
cache/: solidity-files-cache.json  test-failures
contracts/: foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: GoldilocksField.sol  IStarkVerifier.sol  IZkAceVerifier.sol  StarkVerifier.sol  StarkZkAceAccount.sol  StarkZkAceAccountFactory.sol  ZkAceAccount.sol  ZkAceAccountFactory.sol  ZkAceVerifier.sol
contracts/test/: E2E.t.sol  E2E_Arbitrum.t.sol  E2E_ArbitrumMainnet.t.sol  GoldilocksField.t.sol  StarkE2E.t.sol  StarkVerifier.sym.t.sol  StarkVerifierDifferential.t.sol  StarkVerifierV2.t.sol  StarkZkAceAccount.invariant.t.sol  StarkZkAceAccount.t.sol  ZkAceAccount.t.sol  ZkAceAccountFactory.t.sol  ZkAceHandler.sol
contracts/test/fixtures/: stark_proof.hex
contracts/test/fixtures/fuzz/: proof_constr_comm.hex  proof_fri_comm.hex  proof_ood_digest.hex  proof_pow_nonce.hex  proof_trace_comm.hex  proof_valid.hex  pub_inputs.hex
crates/zk-ace-circuit/: Cargo.toml
crates/zk-ace-circuit/src/: circuit.rs  constraints.rs  lib.rs  poseidon.rs  types.rs  witness.rs
crates/zk-ace-didp/: Cargo.toml
crates/zk-ace-didp/src/: commitment.rs  derive.rs  hkdf_didp.rs  lib.rs  types.rs
crates/zk-ace-prover/: Cargo.toml
crates/zk-ace-prover/artifacts/: ceremony.json
crates/zk-ace-prover/src/: lib.rs  prover.rs  serialization.rs  setup.rs  solidity.rs  verifier.rs
crates/zk-ace-stark/: Cargo.toml
crates/zk-ace-stark-wasm/: Cargo.toml
crates/zk-ace-stark-wasm/src/: lib.rs
crates/zk-ace-stark/src/: air.rs  keccak_hasher.rs  lib.rs  prover.rs  rescue.rs  serialization.rs  verifier.rs
crates/zk-ace-stark/tests/: proptest.rs
crates/zk-ace-wasm/: Cargo.toml
crates/zk-ace-wasm/src/: bridge.rs  lib.rs
docs/audit/: 2026-04-02-stark-vault-claim-validation.md  2026-04-02-stark-vault-crypto-review.md  2026-04-02-stark-vault-dataflow.md  2026-04-02-stark-vault-final-findings.md  2026-04-02-stark-vault-scope-freeze.md  2026-04-02-stark-vault-test-evidence.md  2026-04-02-stark-vault-wallet-review.md  threat_model.md
docs/superpowers/plans/: 2026-04-01-audit-remediation.md  2026-04-01-production-readiness.md
docs/superpowers/specs/: 2026-04-01-vault-app-design.md
sdk/: package.json  tsconfig.json
sdk/src/: bundler.ts  encoding.ts  index.ts  paymaster.ts  prover.ts  types.ts  userop.ts
vault-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
vault-app/src/: main.ts
wallet/: index.html  package-lock.json  package.json  tsconfig.json
wallet/src/: main.ts
website/: index.html  package-lock.json  package.json  vite.config.ts
website/public/: faq.html  md.html
