[workspace]
members = [
    "crates/zk-ace-circuit",
    "crates/zk-ace-prover",
    "crates/zk-ace-didp",
    "crates/zk-ace-wasm",
    "crates/zk-ace-stark",
    "crates/zk-ace-stark-wasm",
]
resolver = "2"

[workspace.dependencies]
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["sponge", "r1cs"] }
ark-groth16 = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-snark = "0.4"
ark-std = "0.4"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = true
