[package]
name = "zk-ace-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-std = { workspace = true }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
ark-relations = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
