[package]
name = "zk-ace-didp"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-std = { workspace = true }
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
