[package]
name = "zk-ace-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
zk-ace-circuit = { path = "../zk-ace-circuit" }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-relations = { workspace = true }
ark-groth16 = { workspace = true }
ark-snark = { workspace = true }
ark-serialize = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-std = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde_json = "1"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }

[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[[bin]]
name = "gen_fixture"
path = "src/bin/gen_fixture.rs"

[[bin]]
name = "live_e2e"
path = "src/bin/live_e2e.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
