[package]
name = "zk-ace-stark"
version = "0.1.0"
edition = "2021"

[dependencies]
winterfell = "0.13"
winter-utils = "0.13"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "stark-benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "gen-sol-proof"
path = "src/bin/gen_sol_proof.rs"

[[bin]]
name = "fuzz_verifier"
path = "src/bin/fuzz_verifier.rs"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
proptest = "1.4.0"
