[package]
name = "zk-ace-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zk-ace-circuit = { path = "../zk-ace-circuit" }
zk-ace-prover = { path = "../zk-ace-prover" }
zk-ace-didp = { path = "../zk-ace-didp" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-snark = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
